Archive2/95/1f60fff0ce0532/output
main.cpp:10:5: error: expected ‘;’ before ‘static’
     static const int a = 5;
     ^
main.cpp: In function ‘int main()’:
main.cpp:16:18: error: ‘struct A’ has no member named ‘a’
     cout << p -> a; //Well-fromed, there is no-compile
                  ^
